--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skl Search Portal</title>
+    <!-- Changed the tab title here -->
+    <title>School Ke Log</title> 
     <!-- Favicon link using the raw GitHub URL -->
     <link rel="icon" href="https://raw.githubusercontent.com/schoolkelog/skl/main/skl-removebg-preview.png">
     
