--- a/index.html
+++ b/index.html
@@ -242,11 +242,9 @@
 
     <!-- Top Navigation and Buttons -->
     <header class="flex justify-end p-4 space-x-4 text-sm">
-        <a href="https://enchantedfalconofbluetower.github.io/SklGPT-/" target="_blank" class="text-gray-700 hover:text-gray-900 px-3 py-1 rounded-full hover:bg-gray-100 transition duration-150">
-            SklGPT for PC
-        </a>
-        <a href="https://enchantedfalconofbluetower.github.io/sklGPT-mobile/" target="_blank" class="text-gray-700 hover:text-gray-900 px-3 py-1 rounded-full hover:bg-gray-100 transition duration-150">
-            SklGPT for Mobile
+        <!-- Updated SklGPT link to SKL Aethelon -->
+        <a href="https://dynamic-cranachan-729a4a.netlify.app" target="_blank" class="text-gray-700 hover:text-gray-900 px-3 py-1 rounded-full hover:bg-gray-100 transition duration-150">
+            SKL Aethelon
         </a>
         <a href="https://sites.google.com/view/sklcommunityguidelines/home" target="_blank" class="text-gray-700 hover:text-gray-900 px-3 py-1 rounded-full hover:bg-gray-100 transition duration-150">
             Community Guidelines
@@ -260,8 +258,8 @@
         <div class="mb-5 flex flex-col items-center">
             <!-- Logo source using the raw GitHub link -->
             <img src="https://raw.githubusercontent.com/schoolkelog/skl/main/unnamed-removebg-preview.png" 
-                 alt="Skl Logo" 
-                 class="w-auto h-32 sm:h-40 object-contain" />
+                alt="Skl Logo" 
+                class="w-auto h-32 sm:h-40 object-contain" />
 
             <!-- School Ke Log Rainbow Text -->
             <div class="rainbow-text">
