--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <!-- Top Navigation and Buttons -->
     <header class="flex justify-end p-4 space-x-4 text-sm">
         <!-- Updated SklGPT link to SKL Aethelon -->
-        <a href="https://sklaethelon.netlify.app/" target="_blank" class="text-gray-700 hover:text-gray-900 px-3 py-1 rounded-full hover:bg-gray-100 transition duration-150">
+        <a href="https://aethelonai.netlify.app/" target="_blank" class="text-gray-700 hover:text-gray-900 px-3 py-1 rounded-full hover:bg-gray-100 transition duration-150">
             SKL Aethelon
         </a>
         <a href="https://sites.google.com/view/sklcommunityguidelines/home" target="_blank" class="text-gray-700 hover:text-gray-900 px-3 py-1 rounded-full hover:bg-gray-100 transition duration-150">
@@ -354,6 +354,7 @@
 
 </body>
 </html>
+
 
 
 
